--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "babel" : {
+    "presets" : [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nick-hernstedt/github-battle.git"
